-Moved all doxygen source documentation to the doc/api directory. -Added information on how to document a KPart -small improvements in Doxyfile*

--- a/doc/api/HowToAddPlugins.dox
+++ b/doc/api/HowToAddPlugins.dox
@@ -1,8 +1,8 @@
-/** \file newplugin.dox.h
+/** \file HowToAddPlugins.dox
   * \brief How to extend KDevelop via plugins
   */
 
-/** \page howToExtend How to extend KDevelop via plugins
+/** \page howToAddPlugins How to extend KDevelop via plugins
 
 \section createDesktop Step 1: Make your plugin loadable
 
