--- a/doc/api/LangSupportStatus.dox
+++ b/doc/api/LangSupportStatus.dox
@@ -17,6 +17,7 @@
       <th scope=col>PHP</th>
       <th scope=col>Python</th>
       <th scope=col>Ruby</th>
+      <th scope=col>Haskell</th>
       <th scope=col>SQL</th>
     </tr>
     <tr>
@@ -32,6 +33,7 @@
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="green">N/A</td>
+      <td bgcolor="green">N/A</td>
     </tr>
     <tr>
       <td>Attribute/Method wizard</td>
@@ -46,6 +48,7 @@
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="green">N/A</td>
+      <td bgcolor="green">N/A</td>
     </tr>
     <tr>
       <td>Qt UI subclassing</td>
@@ -58,6 +61,7 @@
       <td bgcolor="green">N/A</td>
       <td bgcolor="green">N/A</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="green">N/A</td>
       <td bgcolor="green">N/A</td>
       <td bgcolor="green">N/A</td>
     </tr>
@@ -77,6 +81,7 @@
       <td bgcolor="yellow">Internal</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
     </tr>
     <tr>
       <td>Memory Class store</td>
@@ -90,6 +95,7 @@
       <td bgcolor="green">CodeModel</td>
       <td bgcolor="green">CodeModel</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
       <td bgcolor="green">Y</td>
     </tr>
     <tr>
@@ -97,6 +103,7 @@
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="green">Catalog</td>
+      <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
@@ -119,6 +126,7 @@
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
     </tr>
     <tr>
       <td>Code completion</td>
@@ -133,6 +141,7 @@
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
     </tr>
     <tr>
       <td>  </td>
@@ -140,6 +149,7 @@
     <tr>
       <td>Application wizard templates</td>
       <td bgcolor="yellow">Y</td>
+      <td bgcolor="green">Y</td>
       <td bgcolor="green">Y</td>
       <td bgcolor="green">Y</td>
       <td bgcolor="green">Y</td>
@@ -164,6 +174,7 @@
       <td bgcolor="green">Y</td>
       <td bgcolor="green">Y</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
     </tr>
     <tr>
       <td>Filecreate templates</td>
@@ -177,6 +188,7 @@
       <td bgcolor="green">Y</td>
       <td bgcolor="green">Y</td>
       <td bgcolor="green">Y</td>
+      <td bgcolor="yellow">Y</td>
       <td bgcolor="red">N</td>
     </tr>
     <tr>
@@ -191,6 +203,7 @@
       <td bgcolor="yellow">Y</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="green">N/A</td>
       <td bgcolor="red">N</td>
     </tr>
     <tr>
@@ -200,6 +213,7 @@
       <td bgcolor="green">Y</td>
       <td bgcolor="red">N</td>
       <td bgcolor="green">Y</td>
+      <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
@@ -223,6 +237,7 @@
       <td bgcolor="green">Y</td>
       <td bgcolor="green">Y</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
     </tr>
     <tr>
       <td>  </td>
@@ -239,6 +254,7 @@
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
       <td bgcolor="red">N</td>
+      <td bgcolor="green">N/A</td>
       <td bgcolor="red">N</td>
     </tr>
 </table>
