--- a/doc/api/Mainpage.dox
+++ b/doc/api/Mainpage.dox
@@ -49,4 +49,11 @@ all over the code.
   - \ref FAQ
   - \ref deprecated
 
+\section License
+
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.2 or any later
+version published by the Free Software Foundation; For details see
+http://www.gnu.org/copyleft/fdl.html .
+
 */
